# miniwdl-slurm

./: .gitmodules  CHANGELOG.rst  README.md  README.rst  pyproject.toml  setup.py  tox.ini
.github/: release_checklist.md
.github/workflows/: ci.yml
src/miniwdl_slurm/: __init__.py  docker_run.py  slurm.py  slurm_singularity.py
tests/: Vagrantfile  miniwdl.cfg  slurm_playbook.yml  vagrant_playbook.yml
